[project]
name = "Automated-Minesweeper"
version = "0.1.0"
description = "A minesweeper script that uses machine learning to play the game at https://minesweeper.online/"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.40.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "pygame>=2.6.1",
    "selenium>=4.23.0",
]
